app/assets/stylesheets/project_specific/card/_card.scss
@import 'compass';

/*@import '../mixins';*/
@import 'card_defs';

@mixin set_card_color($color) {
   @include soft_edges($color);
   @include raised_border;
   
   $dark_color: darken($color, $card_color_variation_amount);
   $light_color: lighten($color, $card_color_variation_amount);
   @include background-image(linear-gradient(top, $light_color, $dark_color));
      
   .suit {
      color: darken($color, $card_color_variation_amount);
   }
}

.card {
   $blank_card_color: #01b0b0;
   @include set_card_color($blank_card_color);

   * {
      @include box-sizing(border-box);
   }
   
   height: $card_height;
   
   position: relative;
   
   $card_padding: 8px;
   $top_row_height: $card_height / 1.7;
   
   .top_left_rank {
      padding-left: $card_padding;
      padding-top: $card_padding;
      height: $top_row_height;
      
      font-size: $default_primary_font_size*1.5;
   }
   .suit {
      padding-right: $card_padding;
      padding-top: $card_padding;
      height: $top_row_height;
      text-align: right;

      font-size: $default_primary_font_size*3;
   }
   .bottom_right_rank {
      padding-right: $card_padding;
      text-align: right;
      font-size: $default_primary_font_size*4;
   }
   @include background-image(linear-gradient(top left, darken($blank_card_color, 25%), $blank_card_color));
   // background-size: ;
   .logo {
      @include box-sizing(border-box);

      // Include card logo like this:
      // @include background-image(image-url('cprg_chip_label_front.png'));
      
      height: $card_height;
      width: $card_width;

      $logo_radius: $card_width - 2 * $card_padding;
      margin-left: $card_padding;
      margin-right: $card_padding;
      background-size: $logo_radius;
      background-repeat: no-repeat;
      margin-top: ($card_height - $logo_radius) / 2;
   }
}

.card#c {
   @include set_card_color(#107010);
}
.card#d {
   @include set_card_color(#2020A0);
}
.card#h {
   @include set_card_color(#B00101);
}
.card#s {
   @include set_card_color(#303030);
}

